--- a/src/Admin/templates/Cars/default.latte
+++ b/src/Admin/templates/Cars/default.latte
@@ -5,6 +5,10 @@
 		{include ../tabs.latte active => 'cars'}
 	</div>
 	
+	<br />
+	<a class="btn btn-primary" n:href="synchronize idPage => $idPage">{_'Synchronize'}</a>
+	<br /><br />
+
 	{control grid}
 
 {/block}
